ExceptionUtil: Jakarta validation message for Collection object improved